{
  "version": 4,
  "terraform_version": "1.6.4",
  "serial": 54,
  "lineage": "868be225-4e83-e889-1635-dfd43c36d3d3",
  "resources": [
    {
      "module": "module.ec2",
      "mode": "managed",
      "type": "aws_eip",
      "name": "eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-03954613bcf2f7f70",
            "association_id": "eipassoc-05379e00d2bed4090",
            "domain": "vpc",
            "id": "eipalloc-03954613bcf2f7f70",
            "network_border_group": "us-east-1",
            "network_interface": "eni-0c3455d9f5a289d78",
            "private_dns": "ip-192-168-1-84.ec2.internal",
            "private_ip": "192.168.1.84",
            "public_dns": "ec2-44-219-125-121.compute-1.amazonaws.com",
            "public_ip": "44.219.125.121",
            "public_ipv4_pool": "amazon",
            "tags_all": {
              "Created_for": "Terraform",
              "Environment": "Test",
              "Name": "Provider Tag"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "module": "module.ec2",
      "mode": "managed",
      "type": "aws_instance",
      "name": "webserver",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0c7217cdde317cfec",
            "arn": "arn:aws:ec2:us-east-1:964674229867:instance/i-08bee15b7efdaa44d",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-08bee15b7efdaa44d",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-033eaa4554855acd9",
            "private_dns": "ip-192-168-4-36.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "192.168.4.36",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0f0b795bf6895527c",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0d4ebba2453936684",
            "tags": {
              "Name": "webserver-0"
            },
            "tags_all": {
              "Created_for": "Terraform",
              "Environment": "Test",
              "Name": "webserver-0"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-00583b2d6dfeb184c"
            ]
          },
          "dependencies": [
            "module.ec2.aws_subnet.Private",
            "module.ec2.aws_vpc.main",
            "module.ec2.data.aws_ami.ubuntu",
            "module.ec2.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0c7217cdde317cfec",
            "arn": "arn:aws:ec2:us-east-1:964674229867:instance/i-07fbc56796ebcc923",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-1b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-07fbc56796ebcc923",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-04c86ea1f8545e6d0",
            "private_dns": "ip-192-168-5-21.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "192.168.5.21",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0854f4782fa68fb30",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0594788c6ead9dd48",
            "tags": {
              "Name": "webserver-1"
            },
            "tags_all": {
              "Created_for": "Terraform",
              "Environment": "Test",
              "Name": "webserver-1"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-00583b2d6dfeb184c"
            ]
          },
          "dependencies": [
            "module.ec2.aws_subnet.Private",
            "module.ec2.aws_vpc.main",
            "module.ec2.data.aws_ami.ubuntu",
            "module.ec2.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0c7217cdde317cfec",
            "arn": "arn:aws:ec2:us-east-1:964674229867:instance/i-045dc78a095f5215f",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-1c",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-045dc78a095f5215f",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-05662d10571d0acf8",
            "private_dns": "ip-192-168-6-169.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "192.168.6.169",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0a7987eb51117d7f5",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0514a2ebd4ec175e6",
            "tags": {
              "Name": "webserver-2"
            },
            "tags_all": {
              "Created_for": "Terraform",
              "Environment": "Test",
              "Name": "webserver-2"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-00583b2d6dfeb184c"
            ]
          },
          "dependencies": [
            "module.ec2.aws_subnet.Private",
            "module.ec2.aws_vpc.main",
            "module.ec2.data.aws_ami.ubuntu",
            "module.ec2.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.ec2",
      "mode": "managed",
      "type": "aws_instance",
      "name": "webserver-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0c7217cdde317cfec",
            "arn": "arn:aws:ec2:us-east-1:964674229867:instance/i-05367be8d3b273847",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-05367be8d3b273847",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-034d2a8e3bf9099b3",
            "private_dns": "ip-192-168-1-230.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "192.168.1.230",
            "public_dns": "ec2-3-83-87-140.compute-1.amazonaws.com",
            "public_ip": "3.83.87.140",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-004e57796c29b8f76",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0a5f443f52ae1c765",
            "tags": {
              "Name": "DevCloudGeek-webserver-0"
            },
            "tags_all": {
              "Created_for": "Terraform",
              "Environment": "Test",
              "Name": "DevCloudGeek-webserver-0"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-00583b2d6dfeb184c"
            ]
          },
          "dependencies": [
            "module.ec2.aws_subnet.Public_subnet",
            "module.ec2.aws_vpc.main",
            "module.ec2.data.aws_ami.ubuntu",
            "module.ec2.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0c7217cdde317cfec",
            "arn": "arn:aws:ec2:us-east-1:964674229867:instance/i-0a713184073811085",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0a713184073811085",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-03e041d11617aa9c7",
            "private_dns": "ip-192-168-2-85.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "192.168.2.85",
            "public_dns": "ec2-54-196-254-188.compute-1.amazonaws.com",
            "public_ip": "54.196.254.188",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-061fa848220b410cf",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-06365fee2c8efd155",
            "tags": {
              "Name": "DevCloudGeek-webserver-1"
            },
            "tags_all": {
              "Created_for": "Terraform",
              "Environment": "Test",
              "Name": "DevCloudGeek-webserver-1"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-00583b2d6dfeb184c"
            ]
          },
          "dependencies": [
            "module.ec2.aws_subnet.Public_subnet",
            "module.ec2.aws_vpc.main",
            "module.ec2.data.aws_ami.ubuntu",
            "module.ec2.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0c7217cdde317cfec",
            "arn": "arn:aws:ec2:us-east-1:964674229867:instance/i-0d59c4a174fc9e7a7",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1c",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0d59c4a174fc9e7a7",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-047087183ec6a65a4",
            "private_dns": "ip-192-168-3-229.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "192.168.3.229",
            "public_dns": "ec2-3-89-72-170.compute-1.amazonaws.com",
            "public_ip": "3.89.72.170",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-01cec31515b04524e",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0247cd24750272e98",
            "tags": {
              "Name": "DevCloudGeek-webserver-2"
            },
            "tags_all": {
              "Created_for": "Terraform",
              "Environment": "Test",
              "Name": "DevCloudGeek-webserver-2"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-00583b2d6dfeb184c"
            ]
          },
          "dependencies": [
            "module.ec2.aws_subnet.Public_subnet",
            "module.ec2.aws_vpc.main",
            "module.ec2.data.aws_ami.ubuntu",
            "module.ec2.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.ec2",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:964674229867:internet-gateway/igw-095c019b21341c509",
            "id": "igw-095c019b21341c509",
            "owner_id": "964674229867",
            "tags": {
              "Name": "igw"
            },
            "tags_all": {
              "Created_for": "Terraform",
              "Environment": "Test",
              "Name": "igw"
            },
            "vpc_id": "vpc-0ce310ec5513eb5b1"
          },
          "dependencies": [
            "module.ec2.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.ec2",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-03954613bcf2f7f70",
            "association_id": "eipassoc-05379e00d2bed4090",
            "connectivity_type": "public",
            "id": "nat-0f5520e056847992d",
            "network_interface_id": "eni-0c3455d9f5a289d78",
            "private_ip": "192.168.1.84",
            "public_ip": "44.219.125.121",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0a5f443f52ae1c765",
            "tags": {
              "Name": "nat"
            },
            "tags_all": {
              "Created_for": "Terraform",
              "Environment": "Test",
              "Name": "nat"
            }
          },
          "dependencies": [
            "module.ec2.aws_eip.eip",
            "module.ec2.aws_subnet.Public_subnet",
            "module.ec2.aws_vpc.main",
            "module.ec2.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.ec2",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private_route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:964674229867:route-table/rtb-0e4804fc7b0ad5a2e",
            "id": "rtb-0e4804fc7b0ad5a2e",
            "owner_id": "964674229867",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-095c019b21341c509",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "private_route_table"
            },
            "tags_all": {
              "Created_for": "Terraform",
              "Environment": "Test",
              "Name": "private_route_table"
            },
            "timeouts": null,
            "vpc_id": "vpc-0ce310ec5513eb5b1"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.ec2.aws_internet_gateway.igw",
            "module.ec2.aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:964674229867:route-table/rtb-0308516cccb0e648f",
            "id": "rtb-0308516cccb0e648f",
            "owner_id": "964674229867",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-095c019b21341c509",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "private_route_table"
            },
            "tags_all": {
              "Created_for": "Terraform",
              "Environment": "Test",
              "Name": "private_route_table"
            },
            "timeouts": null,
            "vpc_id": "vpc-0ce310ec5513eb5b1"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.ec2.aws_internet_gateway.igw",
            "module.ec2.aws_vpc.main"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:964674229867:route-table/rtb-0bcb6dd22c1fc6e4a",
            "id": "rtb-0bcb6dd22c1fc6e4a",
            "owner_id": "964674229867",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-095c019b21341c509",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "private_route_table"
            },
            "tags_all": {
              "Created_for": "Terraform",
              "Environment": "Test",
              "Name": "private_route_table"
            },
            "timeouts": null,
            "vpc_id": "vpc-0ce310ec5513eb5b1"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.ec2.aws_internet_gateway.igw",
            "module.ec2.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.ec2",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public_route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:964674229867:route-table/rtb-0450efae2e6989af5",
            "id": "rtb-0450efae2e6989af5",
            "owner_id": "964674229867",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-095c019b21341c509",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "public_route_table"
            },
            "tags_all": {
              "Created_for": "Terraform",
              "Environment": "Test",
              "Name": "public_route_table"
            },
            "timeouts": null,
            "vpc_id": "vpc-0ce310ec5513eb5b1"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.ec2.aws_internet_gateway.igw",
            "module.ec2.aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:964674229867:route-table/rtb-0820d9ca79c580a9a",
            "id": "rtb-0820d9ca79c580a9a",
            "owner_id": "964674229867",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-095c019b21341c509",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "public_route_table"
            },
            "tags_all": {
              "Created_for": "Terraform",
              "Environment": "Test",
              "Name": "public_route_table"
            },
            "timeouts": null,
            "vpc_id": "vpc-0ce310ec5513eb5b1"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.ec2.aws_internet_gateway.igw",
            "module.ec2.aws_vpc.main"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:964674229867:route-table/rtb-021aeece3109e4218",
            "id": "rtb-021aeece3109e4218",
            "owner_id": "964674229867",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-095c019b21341c509",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "public_route_table"
            },
            "tags_all": {
              "Created_for": "Terraform",
              "Environment": "Test",
              "Name": "public_route_table"
            },
            "timeouts": null,
            "vpc_id": "vpc-0ce310ec5513eb5b1"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.ec2.aws_internet_gateway.igw",
            "module.ec2.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.ec2",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_route_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-08087bc002d8ed842",
            "route_table_id": "rtb-0e4804fc7b0ad5a2e",
            "subnet_id": "subnet-0d4ebba2453936684"
          },
          "dependencies": [
            "module.ec2.aws_internet_gateway.igw",
            "module.ec2.aws_route_table.private_route_table",
            "module.ec2.aws_subnet.Private",
            "module.ec2.aws_vpc.main",
            "module.ec2.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0b8a3abd93c60582a",
            "route_table_id": "rtb-0308516cccb0e648f",
            "subnet_id": "subnet-0594788c6ead9dd48"
          },
          "dependencies": [
            "module.ec2.aws_internet_gateway.igw",
            "module.ec2.aws_route_table.private_route_table",
            "module.ec2.aws_subnet.Private",
            "module.ec2.aws_vpc.main",
            "module.ec2.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-01da80e236f71cdf6",
            "route_table_id": "rtb-0bcb6dd22c1fc6e4a",
            "subnet_id": "subnet-0514a2ebd4ec175e6"
          },
          "dependencies": [
            "module.ec2.aws_internet_gateway.igw",
            "module.ec2.aws_route_table.private_route_table",
            "module.ec2.aws_subnet.Private",
            "module.ec2.aws_vpc.main",
            "module.ec2.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.ec2",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_route_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-05f35caff070cac6a",
            "route_table_id": "rtb-0450efae2e6989af5",
            "subnet_id": "subnet-0a5f443f52ae1c765"
          },
          "dependencies": [
            "module.ec2.aws_internet_gateway.igw",
            "module.ec2.aws_route_table.public_route_table",
            "module.ec2.aws_subnet.Public_subnet",
            "module.ec2.aws_vpc.main",
            "module.ec2.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-019e3f6da6b45de4c",
            "route_table_id": "rtb-0820d9ca79c580a9a",
            "subnet_id": "subnet-06365fee2c8efd155"
          },
          "dependencies": [
            "module.ec2.aws_internet_gateway.igw",
            "module.ec2.aws_route_table.public_route_table",
            "module.ec2.aws_subnet.Public_subnet",
            "module.ec2.aws_vpc.main",
            "module.ec2.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-090f4dd00aca91890",
            "route_table_id": "rtb-021aeece3109e4218",
            "subnet_id": "subnet-0247cd24750272e98"
          },
          "dependencies": [
            "module.ec2.aws_internet_gateway.igw",
            "module.ec2.aws_route_table.public_route_table",
            "module.ec2.aws_subnet.Public_subnet",
            "module.ec2.aws_vpc.main",
            "module.ec2.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.ec2",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "allow_ports",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:964674229867:security-group/sg-02ac4957827c9fcbc",
            "description": "Allow TLS inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-02ac4957827c9fcbc",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "TLS from VPC",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "TLS from VPC",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "TLS from VPC",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8080
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "TLS from VPC",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "allow_ports",
            "name_prefix": "",
            "owner_id": "964674229867",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "allow_tls"
            },
            "tags_all": {
              "Created_for": "Terraform",
              "Environment": "Test",
              "Name": "allow_tls"
            },
            "timeouts": null,
            "vpc_id": "vpc-0ce310ec5513eb5b1"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.ec2.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.ec2",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "Private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:964674229867:subnet/subnet-0d4ebba2453936684",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "192.168.4.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0d4ebba2453936684",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "964674229867",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Private_subnet"
            },
            "tags_all": {
              "Created_for": "Terraform",
              "Environment": "Test",
              "Name": "Private_subnet"
            },
            "vpc_id": "vpc-0ce310ec5513eb5b1"
          },
          "dependencies": [
            "module.ec2.aws_vpc.main",
            "module.ec2.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:964674229867:subnet/subnet-0594788c6ead9dd48",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az4",
            "cidr_block": "192.168.5.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0594788c6ead9dd48",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "964674229867",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Private_subnet"
            },
            "tags_all": {
              "Created_for": "Terraform",
              "Environment": "Test",
              "Name": "Private_subnet"
            },
            "vpc_id": "vpc-0ce310ec5513eb5b1"
          },
          "dependencies": [
            "module.ec2.aws_vpc.main",
            "module.ec2.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:964674229867:subnet/subnet-0514a2ebd4ec175e6",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az6",
            "cidr_block": "192.168.6.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0514a2ebd4ec175e6",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "964674229867",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Private_subnet"
            },
            "tags_all": {
              "Created_for": "Terraform",
              "Environment": "Test",
              "Name": "Private_subnet"
            },
            "vpc_id": "vpc-0ce310ec5513eb5b1"
          },
          "dependencies": [
            "module.ec2.aws_vpc.main",
            "module.ec2.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.ec2",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "Public_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:964674229867:subnet/subnet-0a5f443f52ae1c765",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "192.168.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0a5f443f52ae1c765",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "964674229867",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Public_subnet"
            },
            "tags_all": {
              "Created_for": "Terraform",
              "Environment": "Test",
              "Name": "Public_subnet"
            },
            "vpc_id": "vpc-0ce310ec5513eb5b1"
          },
          "dependencies": [
            "module.ec2.aws_vpc.main",
            "module.ec2.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:964674229867:subnet/subnet-06365fee2c8efd155",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az4",
            "cidr_block": "192.168.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-06365fee2c8efd155",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "964674229867",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Public_subnet"
            },
            "tags_all": {
              "Created_for": "Terraform",
              "Environment": "Test",
              "Name": "Public_subnet"
            },
            "vpc_id": "vpc-0ce310ec5513eb5b1"
          },
          "dependencies": [
            "module.ec2.aws_vpc.main",
            "module.ec2.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:964674229867:subnet/subnet-0247cd24750272e98",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az6",
            "cidr_block": "192.168.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0247cd24750272e98",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "964674229867",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Public_subnet"
            },
            "tags_all": {
              "Created_for": "Terraform",
              "Environment": "Test",
              "Name": "Public_subnet"
            },
            "vpc_id": "vpc-0ce310ec5513eb5b1"
          },
          "dependencies": [
            "module.ec2.aws_vpc.main",
            "module.ec2.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.ec2",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:964674229867:vpc/vpc-0ce310ec5513eb5b1",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "192.168.0.0/16",
            "default_network_acl_id": "acl-06e6fa8744b002904",
            "default_route_table_id": "rtb-0561e2a12b1c25deb",
            "default_security_group_id": "sg-00583b2d6dfeb184c",
            "dhcp_options_id": "dopt-045d58a17c6c8e8d0",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0ce310ec5513eb5b1",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0561e2a12b1c25deb",
            "owner_id": "964674229867",
            "tags": {
              "Name": "main"
            },
            "tags_all": {
              "Created_for": "Terraform",
              "Environment": "Test",
              "Name": "main"
            }
          }
        }
      ]
    }
  ]
}